--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^12.24.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.344.0",
     "next-themes": "^0.4.6",
