--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "node-fetch": "^3.3.2",
+    "openai": "^6.15.0",
     "ripple-keypairs": "^2.0.0",
     "xrpl": "^4.5.0"
   },
