--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "openai": "^6.15.0",
     "ripple-keypairs": "^2.0.0",
